--- a/src/assets/styles/foodBankList.scss
+++ b/src/assets/styles/foodBankList.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    z-index: 1;
 
     form {
         max-width: 1250px;
@@ -32,5 +33,30 @@
         td {
             text-align: center;
         }
+    }
+}
+
+#submit_module {
+    padding: 1rem 4rem;
+    position: fixed;
+    top: 45vh;
+    left: 35vw;
+    background-color: orange;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    z-index: 2;
+
+    #save_text {
+        font-size: 1.5rem;
+    }
+
+    #foodBank_Submit {
+        background-color: #9725bf;
+        padding: 1rem 4rem;
+        color: white;
+        text-align: center;
+        border-radius: 16px;
+        font-size: 1.25rem;
     }
 }
