--- a/src/assets/styles/root.scss
+++ b/src/assets/styles/root.scss
@@ -1,3 +1,5 @@
+@import "./library.scss";
+
 body {
     margin: 0;
     top: 0;
@@ -5,14 +7,14 @@ body {
     width: 100%;
     height: 100%;
     padding: 0;
-    background-color: gray;
+    background-color: $white;
 }
 
 #root {
-        margin: 0;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
-        padding: 0;
+    margin: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
 }
