chore: I have added a few more styling to the hamburger icon

--- a/src/assets/styles/hamburger.scss
+++ b/src/assets/styles/hamburger.scss
@@ -30,8 +30,8 @@
     margin-bottom: 3px;
 }
 
-@media screen and (min-width: 1023px) {
-    #hamburger_wrapper {
+@media (min-width: 1023px) {
+    #hamburg_wrapper {
     display: none;
     }
 }
