--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -34,3 +34,21 @@ nav {
   }
 }
 
+@media screen and (max-width: 1023px) {
+  #nav_wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 0;
+    height: 50%;
+    opacity: 0;
+    transition: width .7s ease-in-out, opacity .7s ease-in-out;
+    border-radius: 0px 12px 12px 0px;
+    box-shadow: 0px 9px 80px rgba(0, 0, 0, .6);
+
+   a {
+    margin-top: 1rem;
+    }
+  }
+}
