--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -16,11 +16,14 @@
  text-align: center;
 }
 
-nav {
+#nav_wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   background-color: $chapel-gray;
   padding-top: 1rem;
-    padding-bottom: 1rem;
-  text-align: center;
+  padding-bottom: 1rem;
+  width: 100vw;
   a {
     @include paragraph-medium;
     margin-left: 1rem;
@@ -40,10 +43,10 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 0;
+    width: 20%;
     height: 50%;
     opacity: 0;
-    transition: width .7s ease-in-out, opacity .7s ease-in-out;
+    transition: opacity .7s ease-in-out;
     border-radius: 0px 12px 12px 0px;
     box-shadow: 0px 9px 80px rgba(0, 0, 0, .6);
 
