--- a/src/assets/styles/hamburger.scss
+++ b/src/assets/styles/hamburger.scss
@@ -3,6 +3,7 @@
 #hamburg_wrapper {
     position: fixed;
     right: 1rem;
+    top: 10rem;
     border-width: .25rem;
     border-style: solid;
     border-color: white;
