--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -16,7 +16,7 @@
  text-align: center;
 }
 
-#nav_wrapper {
+.nav_wrapper {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -37,21 +37,45 @@
   }
 }
 
+.mobile_nav_wrapper {
+  display: none;
+}
+
 @media screen and (max-width: 1023px) {
-  #nav_wrapper {
+  .nav_wrapper {
+    display: none;
+    a {
+      display: none;
+    }
+
+  }
+
+  .mobile_nav_wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 20%;
-    height: 50%;
-    opacity: 0;
-    transition: opacity .7s ease-in-out;
+    flex-wrap: wrap;
+    text-align: center;
+    width: 30%;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
     border-radius: 0px 12px 12px 0px;
     box-shadow: 0px 9px 80px rgba(0, 0, 0, .6);
+    background-color: $chapel-gray;
 
    a {
+    @include paragraph-medium;
     margin-top: 1rem;
+    text-decoration: none;
+    margin-left: 1rem;
+    padding-right: 2rem;
+    color: white;
+    text-decoration: none;
+
+    &:hover {
+      color: $orange;
     }
+  }
   }
 }
