chore: I have created a few more mixins for to help expedite the building of the UI

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -6,13 +6,14 @@
   margin: 0;
   padding: 0;
   top: 0;
+  background-color: $chapel-gray;
 }
 
 #header_wrapper {
-  background-color: $chapel-purple;
   @include header-large-bold;
   padding-top: 2rem;
   padding-bottom: 2rem;
   text-align: center;
+  border-bottom: .15rem solid $purple;
 }
 
