--- a/src/assets/styles/hamburger.scss
+++ b/src/assets/styles/hamburger.scss
@@ -4,7 +4,7 @@
     position: fixed;
     right: 1rem;
     top: 10rem;
-    border-width: .25rem;
+    border-width: .05rem;
     border-style: solid;
     border-color: white;
     height: 50px;
@@ -19,13 +19,13 @@
     padding-right: 1rem;
 
     &:hover {
-        background-color: $orange;
+        background-color: $purple;
     }
 }
 
 .hamburger_line {
     width: 2rem;
-    height: .25rem;
+    height: .15rem;
     background-color: white;
     margin-top: 3px;
     margin-bottom: 3px;
