--- a/src/assets/styles/login.scss
+++ b/src/assets/styles/login.scss
@@ -11,45 +11,33 @@
     padding: 0;
     bottom: 0;
 
-    form{
+    form {
         display: flex;
         flex-direction: column;
         width: 40vw;
-        height: 40vh;
         padding: 2rem 8rem 2rem 8rem;
         margin: auto;
         background-color: $chapel-gray;
         justify-content: center;
         border-radius: 16px;
-        box-shadow: 0px 9px 80px rgba(151, 37, 191, .5);
+        box-shadow: 0px 8px 80px rgba(151, 37, 191, .5);
+        max-width: 560px;
 
         label {
-            @include paragraph-medium;
-            color: white;
-            margin-bottom: .5rem;
-            margin-top: 1rem;
+            @include medium-label;
         }
+
         input {
-            @include paragraph-medium;
+            @include medium-input;
         }
 
         .submit_button {
-            @include btn-large;
             @include btn-small;
-            @include paragraph-medium;
-            @include btn-gray;
-
-            &:hover {
-                background-color: $purple;
-            }
         }
     }
 
-    #login_submit{
+    #login_submit {
         margin-left: auto;
         margin-right: auto;
-        padding: 6px 18px 6px 18px;
-        border-radius: 16px;
-        margin-top: 1rem;
     }
 }
