--- a/src/assets/styles/navBar.scss
+++ b/src/assets/styles/navBar.scss
@@ -4,10 +4,11 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: $chapel-gray;
+    background-color: $dark-gray;
     padding-top: 1rem;
     padding-bottom: 1rem;
     width: 100vw;
+    border-bottom: .15rem solid $purple;
   
     a {
       @include paragraph-medium;
