chore: I have started styling the new applicant page

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -10,10 +10,7 @@
 }
 
 #header_wrapper {
-  @include header-large-bold;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  text-align: center;
-  border-bottom: .15rem solid $purple;
+  @include large-header;
+  
 }
 
