--- a/src/assets/styles/navBar.scss
+++ b/src/assets/styles/navBar.scss
@@ -1,6 +1,7 @@
 @import "./library.scss";
 
 .nav_wrapper {
+  @include bottom-border;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -8,7 +9,6 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
     width: 100vw;
-    border-bottom: .15rem solid $purple;
   
     a {
       @include paragraph-medium;
