chore: continuing to work on the styling for the new applicant page.

--- a/src/assets/styles/newApplicant.scss
+++ b/src/assets/styles/newApplicant.scss
@@ -17,8 +17,9 @@
     }
 
     .section_heading {
-        padding: .5rem 4rem .5rem .5rem;
-        text-align: left;
+        padding-top: .5rem;
+        padding-bottom: .5rem;
+        text-align: center;
         border-style: solid;
         border-color: white;
         border-radius: 14px;
