--- a/src/assets/styles/navBar.scss
+++ b/src/assets/styles/navBar.scss
@@ -50,6 +50,9 @@
       border-radius: 0px 12px 12px 0px;
       box-shadow: 0px 9px 80px rgba(0, 0, 0, .6);
       background-color: $chapel-gray;
+      z-index: 5;
+      position: fixed;
+      top: 10rem;
   
       a {
         @include paragraph-medium;
