--- a/src/assets/styles/root.scss
+++ b/src/assets/styles/root.scss
@@ -7,7 +7,7 @@ body {
     width: 100%;
     height: 100%;
     padding: 0;
-    background-color: $white;
+    background-color: $chapel-gray;
 }
 
 #root {
