--- a/src/assets/styles/newApplicant.scss
+++ b/src/assets/styles/newApplicant.scss
@@ -52,3 +52,23 @@
         width: 120px;
     }
 }
+
+
+@media (max-width: 1023px) {
+    #new_applicant_wrapper {
+        .shadow_form {
+            width: 100vw;
+            padding-left: 1rem; 
+            padding-left: .25rem;
+            padding-right: .25rem;
+        }
+
+        .input_pair {
+            width: 80%;
+        }
+
+        .section_heading {
+            width: 80%;
+        }
+    }
+}
