--- a/src/assets/styles/library.scss
+++ b/src/assets/styles/library.scss
@@ -142,4 +142,21 @@ $orange: #FB9400;
     border-radius: 16px;
     box-shadow: 0px 8px 80px rgba(151, 37, 191, .5);
     max-width: 560px;
+    margin-top: 6rem;
+    margin-bottom: 6rem;
+    align-items: center;
+}
+
+@mixin medium-section-heading {
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    text-align: center;
+    border-style: solid;
+    border-color: white;
+    border-radius: 14px;
+    border-width: .15rem;
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    width: 100%;
+    @include paragraph-medium;
 }
