--- a/src/assets/styles/newApplicant.scss
+++ b/src/assets/styles/newApplicant.scss
@@ -44,10 +44,7 @@
 @media (max-width: 1023px) {
     #new_applicant_wrapper {
         .shadow_form {
-            width: 100vw;
-            padding-left: 1rem; 
-            padding-left: .25rem;
-            padding-right: .25rem;
+            @include mobile-shadow-form;
         }
 
         .input_pair {
