--- a/src/assets/styles/searchBar.scss
+++ b/src/assets/styles/searchBar.scss
@@ -23,3 +23,16 @@
         @include btn-small;
     }
 }
+
+@media (max-width: 1023px) {
+    #applicantSearch {
+        @include mobile-shadow-form;
+
+        label {
+            width: 80%;
+        }
+        select {
+            width: 80%;
+        }
+    }
+}
