--- a/src/assets/styles/library.scss
+++ b/src/assets/styles/library.scss
@@ -61,7 +61,7 @@ $orange: #FB9400;
 @mixin paragraph-small {
     font-family: 'Ubuntu', sans-serif;
     font-size: 15px;
-    line-height: .2rem;
+    line-height: 1.5rem;
 }
 
 @mixin btn-large {
@@ -143,7 +143,7 @@ $orange: #FB9400;
     box-shadow: 0px 8px 80px rgba(151, 37, 191, .5);
     max-width: 560px;
     margin-top: 6rem;
-    margin-bottom: 6rem;
+    margin-bottom: 2rem;
     align-items: center;
 }
 
@@ -167,4 +167,20 @@ $orange: #FB9400;
     margin-bottom: 1rem;
     width: 100%;
     @include paragraph-medium;
+}
+
+@mixin btn-small-danger {
+    @include btn-small;
+
+        &:hover {
+            background-color: $orange;
+        }
+}
+
+@mixin btn-multiple {
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    column-gap: 2rem;
+    margin-bottom: 2rem;
 }
