--- a/src/assets/styles/login.scss
+++ b/src/assets/styles/login.scss
@@ -41,3 +41,21 @@
         margin-right: auto;
     }
 }
+
+@media (max-width: 1023px) {
+    #login_container {
+        form {
+         width: 100vw;
+         padding-left: 2.5rem;
+         padding-right: 2.5rem;
+        }
+        input {
+            width: 100%;
+            margin: auto;
+        }
+        .submit_button {
+            @include btn-small;
+            width: 150px;
+        }
+    }
+}
