--- a/src/assets/styles/searchApplicants.scss
+++ b/src/assets/styles/searchApplicants.scss
@@ -29,10 +29,13 @@
         margin-right: auto;
     }
 
-    .field_label {
-        font-style: bold;
-    }
+}
 
+@media (max-width: 1023px) {
+    #display_applicant_wrapper {
+        @include mobile-shadow-form;
+        
+    }
 }
 
 
