--- a/src/assets/styles/dashboardIcon.scss
+++ b/src/assets/styles/dashboardIcon.scss
@@ -1,6 +1,6 @@
 @import "./library.scss";
 
-.fb_dashboard_icon {
+.dashboard_icon {
     @include shadow-form;
     color: $white;
     width: 20%;
