--- a/src/assets/styles/displayFbList.scss
+++ b/src/assets/styles/displayFbList.scss
@@ -12,10 +12,10 @@
     z-index: 1;
 
     form {
-        width: 90%;
+        width: 960px;
         margin: auto;
         @include paragraph-large;
-        border-radius: 16px;
+        border-radius: 4px;
         box-shadow: 0 4px 12px $form-border-color;
 
 
@@ -23,6 +23,10 @@
             width: 100%;
             margin: auto;
             border-collapse: collapse;
+            border-radius: 16px;
+
+            
+            
 
             th {
                 padding-bottom: .5rem;
@@ -55,7 +59,8 @@
             a {
                 color: $chapel-purple;
             }
-        }
+        
+    }
     }
 
 }
