--- a/src/assets/styles/library.scss
+++ b/src/assets/styles/library.scss
@@ -89,7 +89,7 @@ $form-border-color: rgba(153, 102, 153, .5);
     font-weight: 500;
     line-height: 1.55;
     border-radius: 16px;
-    background-color: $light-gray;
+    background-color: $purple;
     margin-top: 2rem;
     border-style: none;
     @include paragraph-small;
@@ -98,7 +98,7 @@ $form-border-color: rgba(153, 102, 153, .5);
     cursor: pointer;
 
     &:hover {
-        background-color: $purple;
+        box-shadow: 0 1px 4px $light-gray;
     }
 }
 
