chore: I have added styling to the remove buttons and the cancel button on the current foodbank list page

--- a/src/assets/styles/currentFoodBankList.scss
+++ b/src/assets/styles/currentFoodBankList.scss
@@ -16,4 +16,11 @@
         margin: auto;
         margin-top: 2rem;
     }
+
+    .cancel_button {
+        @include btn-small;
+        width: 250px;
+        margin: auto;
+        margin-top: 2rem;
+    }
 }
