--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -62,12 +62,30 @@
         
             .remove_button {
                 @include btn-small;
-                padding: .25rem 1rem .25rem 1rem;
                 margin-top: 0;
+                padding-top: .25rem;
+                padding-bottom: .25rem;
             }
     }
     }
 
+}
+
+@media (max-width: 1024px) {
+
+    #list_wrapper{
+    form {
+        width: 100vw;
+
+        table {
+            width: 70%;
+
+            th {
+                @include paragraph-small;
+            }
+        }
+    }
+}
 }
 
 
