--- a/src/assets/styles/library.scss
+++ b/src/assets/styles/library.scss
@@ -93,7 +93,8 @@ $form-border-color: rgba(153, 102, 153, .5);
     margin-top: 2rem;
     border-style: none;
     @include paragraph-small;
-    padding: 1rem 2rem 1rem 2rem;
+    min-width: 150px;
+    padding: .5rem 1.5rem .5rem 1.5rem;
     color: white;
     cursor: pointer;
 
@@ -143,7 +144,7 @@ $form-border-color: rgba(153, 102, 153, .5);
     background-color: $chapel-gray;
     justify-content: center;
     border-radius: 16px;
-    box-shadow: 0px 8px 80px rgba(151, 37, 191, .5);
+    box-shadow: 0px 4px 12px $form-border-color;
     max-width: 560px;
     margin-top: 6rem;
     margin-bottom: 2rem;
