--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -66,6 +66,28 @@
                 padding-top: .25rem;
                 padding-bottom: .25rem;
             }
+
+            .call_button {
+                @include btn-small;
+                text-decoration: none;
+            }
+
+            .not_present_button {
+                @include btn_small;
+                margin-top: 0;
+                min-width: 75px;
+                width: 75px;
+                @include paragraph-large;
+                background-color: orange;
+            }
+
+            .present_button {
+                @include btn_small;
+                margin-top: 0;
+                min-width: 75px;
+                width: 75px;
+                @include paragraph-large;
+            }
     }
     }
 
@@ -75,13 +97,39 @@
 
     #list_wrapper{
     form {
-        width: 100vw;
+        width: 95%;
+        margin: auto;
 
         table {
-            width: 70%;
+            width: 100%;
 
             th {
                 @include paragraph-small;
+                border: none;
+            }
+
+            td {
+                @include paragraph-small;
+                border: none;
+            }
+
+            .remove_button {
+                min-width: 30px;
+                padding: .25rem .5rem .25rem .5rem;
+                font-size: 24;
+                background-color: $orange;
+            }
+
+            .present_button {
+                @include btn_small;
+                margin-top: 0;
+                min-width: 10px;
+                padding: .15rem .3rem;
+                @include paragraph-large;
+            }
+
+            #attended {
+                width: 40px;
             }
         }
     }
