chore: I am revising a few of the colors and removing some unnecessary borders

--- a/src/assets/styles/navBar.scss
+++ b/src/assets/styles/navBar.scss
@@ -1,7 +1,7 @@
 @import "./library.scss";
 
 .nav_wrapper {
-  @include bottom-border;
+  //@include bottom-border;
     display: flex;
     flex-direction: row;
     justify-content: center;
