--- a/src/assets/styles/dashboardIcon.scss
+++ b/src/assets/styles/dashboardIcon.scss
@@ -2,6 +2,14 @@
 
 .dashboard_icon {
     @include shadow-form;
+    border-style: none;
     color: $white;
     width: 20%;
+    @include paragraph-medium;
+    
+
+    &:hover {
+        cursor: pointer;
+        box-shadow: 0px 4px 12px $orange;
+    }
 }
