--- a/src/assets/styles/library.scss
+++ b/src/assets/styles/library.scss
@@ -123,12 +123,12 @@ $form-border-color: rgba(153, 102, 153, .5);
 }
 
 @mixin bottom-border {
-    border-bottom: .15rem solid $purple;
+    border-bottom: 1px solid $form-border-color;
 }
 
 @mixin large-header {
     @include header-large-bold;
-    @include bottom-border;
+    //@include bottom-border;
     padding-top: 2rem;
     padding-bottom: 2rem;
     text-align: center;
@@ -143,8 +143,10 @@ $form-border-color: rgba(153, 102, 153, .5);
     margin: auto;
     background-color: $chapel-gray;
     justify-content: center;
-    border-radius: 4px;
+    //border-radius: 4px;
+    border-radius: 16px;
     box-shadow: 0px 4px 12px $form-border-color;
+    //box-shadow: 0px 8px 80px rgba(151, 37, 191, .5);
     max-width: 560px;
     margin-top: 6rem;
     margin-bottom: 2rem;
