--- a/src/assets/styles/login.scss
+++ b/src/assets/styles/login.scss
@@ -19,8 +19,11 @@
         margin: auto;
         background-color: $chapel-gray;
         justify-content: center;
-        border-radius: 16px;
-        box-shadow: 0px 8px 80px rgba(151, 37, 191, .5);
+        //border-radius: 16px;
+        //box-shadow: 0px 8px 80px rgba(151, 37, 191, .5);
+        box-shadow: 0 4px 12px $form-border-color;
+        border-radius: 4px;
+       // border: solid 1px $form-border-color;
         max-width: 560px;
 
         label {
@@ -33,16 +36,19 @@
 
         .submit_button {
             @include btn-small;
+            width: 150px;
+            margin: 2rem auto auto auto;
         }
     }
 
-    #login_submit {
-        margin-left: auto;
+   /* #login_submit {
+        @include btn-small;
+        /*margin-left: auto;
         margin-right: auto;
-    }
+    }*/
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 1024px) {
     #login_container {
         form {
             width: 100vw;
