--- a/src/assets/styles/navBar.scss
+++ b/src/assets/styles/navBar.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: $dark-gray;
+    background-color: $chapel-light-gray;
     padding-top: 1rem;
     padding-bottom: 1rem;
     width: 100vw;
