--- a/src/assets/styles/searchBar.scss
+++ b/src/assets/styles/searchBar.scss
@@ -6,6 +6,7 @@
     label {
         @include medium-section-heading;
         margin-top: 0;
+        color: white;
     }
 
     input {
@@ -21,6 +22,7 @@
 
     #applicantSearchSubmit {
         @include btn-small;
+        width: 150px;
     }
 }
 
