chore: I have all of the headings style correctly, now

--- a/src/assets/styles/currentFoodBankList.scss
+++ b/src/assets/styles/currentFoodBankList.scss
@@ -6,7 +6,7 @@
     align-content: center; 
 
     .header {
-        @include header-large-bold;
+        @include large-header;
         color: white;
         text-align: center;
     }
