--- a/src/assets/styles/searchBar.scss
+++ b/src/assets/styles/searchBar.scss
@@ -2,21 +2,19 @@
 
 #applicantSearch {
     @include shadow-form;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
 
     label {
         @include medium-section-heading;
         margin-top: 0;
+        margin-bottom: 1rem;
         color: white;
-    }
-
-    input {
-        @include medium-input;
-        margin-top: 2rem;
     }
 
     select {
         @include medium-input;
-        margin-top: .25rem;
+        margin-top: 1rem;
         width: 70%;
     }
 
