chore: I have made a few style changes to the current-registered-list page

--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -10,6 +10,11 @@
     flex-direction: column;
     text-align: center;
 
+    #list_title {
+        margin-top: 6rem;
+        margin-bottom: 1rem;
+    }
+
     form {
         width: 960px;
         margin: auto;
