--- a/src/assets/styles/editModuleCurrentList.scss
+++ b/src/assets/styles/editModuleCurrentList.scss
@@ -1,5 +1,15 @@
 @import "./library.scss";
 
+#cl_edit_module_overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, .9);
+    z-index: 10;
+}
+
 #cl_edit_module_wrapper {
    @include shadow-form;
     position: fixed;
@@ -8,6 +18,8 @@
     left: 50%;
     padding: 4rem 2rem 4rem 2rem;
     transform: translate(-50%, 0);
+    z-index: 11;
+    
 
 
     #cl_edit_module_questions {
@@ -17,6 +29,15 @@
             color: $white;
             text-align: center;
         }
+    }
+
+    #cl_edit_module_addNew {
+        position: fixed;
+        top: 17rem;
+        bottom: 0;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        height: 50vh;
     }
 
     #button_wrapper {
@@ -34,6 +55,8 @@
     }
 
 }
+
+
 
 @media (max-width: 1024px) {
     #cl_edit_module_wrapper {
