--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -61,10 +61,7 @@
             }
 
             .remove_button {
-                @include btn-small;
-                margin-top: 0;
-                padding-top: .25rem;
-                padding-bottom: .25rem;
+              @include orange-cancel-button;
             }
 
             .call_button {
@@ -74,11 +71,16 @@
 
             .not_present_button {
                 @include btn_small;
+                border-radius: 16px;
                 margin-top: 0;
                 min-width: 75px;
                 width: 75px;
                 @include paragraph-large;
-                background-color: orange;
+                background-color: $orange;
+
+                &:hover {
+                    background-color: $faded-orange;
+                }
             }
 
             .present_button {
@@ -111,13 +113,6 @@
                 td {
                     @include paragraph-small;
                     border: none;
-                }
-
-                .remove_button {
-                    min-width: 30px;
-                    padding: .25rem .5rem .25rem .5rem;
-                    font-size: 24;
-                    background-color: $orange;
                 }
 
                 .present_button {
