--- a/src/assets/styles/editModuleCurrentList.scss
+++ b/src/assets/styles/editModuleCurrentList.scss
@@ -1,13 +1,7 @@
 @import "./library.scss";
 
 #cl_edit_module_overlay {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, .9);
-    z-index: 10;
+    @include dark-overlay;
 }
 
 #cl_edit_module_wrapper {
@@ -53,7 +47,6 @@
             ;
         }
     }
-
 }
 
 
