--- a/src/assets/styles/dashboardIcon.scss
+++ b/src/assets/styles/dashboardIcon.scss
@@ -6,10 +6,17 @@
     color: $white;
     width: 20%;
     @include paragraph-medium;
+    margin-top: 0;
     
 
     &:hover {
         cursor: pointer;
         box-shadow: 0px 4px 12px $orange;
+    }
+}
+
+@media (max-width: 1023px) {
+    .dashboard_icon {
+        width: 30%;
     }
 }
