--- a/src/assets/styles/fbListDashboard.scss
+++ b/src/assets/styles/fbListDashboard.scss
@@ -3,5 +3,20 @@
 #fb_list_dashboard {
     #icon_wrapper {
         display: flex;
+        justify-content: center;
+        column-gap: 2rem;
+        row-gap: 1rem;
+        margin-top: 4rem;
+    }
+}
+
+@media (max-width: 1023px) {
+    #fb_list_dashboard {
+        #icon_wrapper {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
 }
