--- a/src/assets/styles/hamburger.scss
+++ b/src/assets/styles/hamburger.scss
@@ -2,8 +2,8 @@
 
 #hamburg_wrapper {
     position: fixed;
-    right: 1rem;
-    top: .25rem;
+    left: 1rem;
+    top: .3rem;
     border-width: .05rem;
     border-style: solid;
     border-color: white;
