--- a/src/assets/styles/fbListDashboard.scss
+++ b/src/assets/styles/fbListDashboard.scss
@@ -4,9 +4,10 @@
     #icon_wrapper {
         display: flex;
         justify-content: center;
-        column-gap: 2rem;
+        column-gap: 4rem;
         row-gap: 1rem;
-        margin-top: 4rem;
+        margin: 4rem auto auto auto;
+        max-width: 560px;
     }
 }
 
@@ -17,6 +18,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
+            max-width: 100vw;
         }
     }
 }
