chore: I have added a few styling corrections

--- a/src/assets/styles/fbListDashboard.scss
+++ b/src/assets/styles/fbListDashboard.scss
@@ -15,8 +15,7 @@
     #fb_list_dashboard {
         #icon_wrapper {
             display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
+            flex-direction: column;
             justify-content: center;
             max-width: 100vw;
         }
